# onesource

./: .gitignore  .onesourcerc  Cargo.toml  LICENSE  README.md  README_zh.md  install.ps1  install.sh  make_exe.py  oneSource_sourceCodes.xml  release.py  release_notes.md
.gemini/: settings.json
.github/workflows/: github-test.yml  release.yml  test.yml
medias/: demo.tape  simple_demo.tape
release_notes/: 2.3.0_release.md  3.0.0_release.md  3.0.1_release.md  3.0.2_release.md  3.0.3_release.md  3.0.4_release.md  3.0.5_release.md  3.0.6_release.md  3.1.0_release.md  3.2.0_release.md  3.2.1_release.md  3.3.0_release.md  3.3.1_release.md  3.4.0_release.md  3.5.0_release.md  3.5.1_release.md
src/: configs.rs  explain.rs  filter_utils.rs  io_utils.rs  main.rs  scan.rs  self_update.rs  tree_utils.rs
