[package]
name = "onesource"
version = "2.2.0"
license = "MIT"
description = "Placeholder"
edition = "2021"
[dependencies]
arboard = "3.6.1"
clap = { version = "4.0", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"